--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,15 @@ body {
 
 /* Components Layer*/
 @layer components {
+  /* Nav Bar */
+  .nav_list {
+    @apply text-[15px] border-b-[1px] border-[#d7d7d72b] font-Roboto font-medium pl-[10px] py-[5px] hover:bg-[#E6E6E6] hover:z-50;
+  }
+  .nav_link {
+    @apply flex items-center;
+  }
+
+  /* Footer */
   .footer_bs {
     @apply ml-[10px];
   }
@@ -21,6 +30,26 @@ body {
     margin: auto;
     padding: 0px 15px 0px 15px;
   }
+  /* Nav Bar */
+  .dropdown_menu_right {
+    transform: translate3d(-190px, 39px, 0px);
+    top: 26px;
+    box-shadow: 0px 0px 8px rgb(214 214 214 / 78%);
+  }
+  .dropdown_menu_right::before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    margin-left: -0.5em;
+    right: 0px;
+    box-sizing: border-box;
+    border: 7px solid black;
+    border-color: transparent transparent #fff #fff;
+    transform-origin: 0 0;
+    transform: rotate(135deg);
+    box-shadow: -3px 3px 3px -3px rgb(214 214 214 / 78%);
+  }
 }
 
 nav a.active {
@@ -31,7 +60,16 @@ input {
   outline: none;
 }
 
-.active,
+.active {
+  background-color: #ffffff00 !important;
+}
+
+.dot {
+  height: 15px !important;
+  width: 15px !important;
+  margin: 0 5px !important;
+}
+
 .dot:hover {
   background-color: #ffffffa6 !important;
 }
