User Login and Register user show user details navbar

--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,21 @@ body {
     transform: rotate(135deg);
     box-shadow: -3px 3px 3px -3px rgb(214 214 214 / 78%);
   }
+
+  /* Signing Form */
+  .overlay_image_input {
+    transform: translateY(100px);
+    visibility: hidden;
+    opacity: 0;
+  }
+  .Login_input_image:hover .overlay_image_input {
+    transform: translateY(0px);
+    opacity: 1;
+    visibility: visible;
+    transition: all 0.3s;
+    transition-delay: 0.2s;
+    transition-timing-function: cubic-bezier(0, 0.43, 0.15, 1.09);
+  }
 }
 
 /* pagination Products */
